# Geofence-Map

./: CMakeLists.txt  Main.qml  gcp.cpp  gcp.h  geofence.cpp  geofence.h  main.cpp  mapbuild.html  nmea.h  serial.cpp  serial.h
